--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npm run build && npm run build:watch",
     "build": "./node_modules/.bin/gulp sass",
-    "build:watch": "./node_modules/.bin/gulp sass:watch"
+    "build:watch": "./node_modules/.bin/gulp watch"
   },
   "repository": {
     "type": "git",
@@ -18,8 +19,25 @@
     "url": "https://github.com/topscores/epretest-ui/issues"
   },
   "homepage": "https://github.com/topscores/epretest-ui#readme",
+  "dependencies": {
+    "react": "^0.13.3",
+    "react-router": "1.0.0-beta2",
+    "lodash": "^3.10.0"
+  },
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-sass": "^2.1.0"
+    "browserify": "^9.0.3",
+    "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2",
+    "gulp-react": "^3.0.1",
+    "gulp-sass": "^2.0.1",
+    "gulp-server-livereload": "^1.3.0",
+    "gulp-util": "^3.0.4",
+    "gulp-watch": "^4.2.4",
+    "node-notifier": "^4.2.1",
+    "reactify": "^1.1.0",
+    "reflux": "^0.2.8",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^2.4.0",
+    "whatwg-fetch": "^0.9.0"
   }
 }
